--- a/newppc-branch/gcc/config/rs6000/rs6000.md
+++ b/newppc-branch/gcc/config/rs6000/rs6000.md
@@ -8020,25 +8020,14 @@ operands[2] = GEN_INT (INTVAL (operands[1]) >> 32);
   "{l|lwz} %0,%2-%3(%1)"
   [(set_attr "type" "load")])
 
-;; If the TOC is shared over a translation unit, as in SVR4 -fpic
-;; we need to restore the TOC pointer only when jumping over units
-;; of translation.
+;; If the TOC is shared over a translation unit, as happens with all
+;; the kinds of PIC that we support, we need to restore the TOC
+;; pointer only when jumping over units of translation.
 
 (define_expand "builtin_setjmp_receiver"
   [(use (label_ref (match_operand 0 "" "")))]
-  "(DEFAULT_ABI == ABI_V4 || DEFAULT_ABI == ABI_SOLARIS) && flag_pic == 1"
-  "
-{
-  rs6000_emit_load_toc_table (FALSE);
-  DONE;
-}")
-
-;; If the TOC is procedure-specific (as in AIX -mminimal-toc and SVR4 -fPIC),
-;; we must restore it with every nonlocal goto.
-
-(define_expand "nonlocal_goto_receiver"
-  [(use (const_int 0))]
-  "TARGET_TOC && TARGET_MINIMAL_TOC"
+  "((DEFAULT_ABI == ABI_V4 || DEFAULT_ABI == ABI_SOLARIS) && flag_pic == 1)
+   || (TARGET_TOC && TARGET_MINIMAL_TOC)"
   "
 {
   rs6000_emit_load_toc_table (FALSE);
