--- a/newppc-branch/gcc/config/rs6000/ChangeLog
+++ b/newppc-branch/gcc/config/rs6000/ChangeLog
@@ -1,3 +1,9 @@
+2000-02-24  Clinton Popetz  <cpopetz@cygnus.com>
+
+	* config/rs6000/rs6000.md: Added a new alternative for each
+	pattern that had a 'x' alternative but no 'y' alternative.
+	Added a new split for each of the above patterns.
+
 2000-02-18  Geoff Keating  <geoffk@cygnus.com>
 
 	* aix41.h (ASM_CPU_SPEC): Delete.
