--- a/merged-arm-thumb-backend-branch/gcc/ChangeLog
+++ b/merged-arm-thumb-backend-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-03-01  Bernd Schmidt <bernds@cygnus.co.uk>
+
+	* config/arm/arm.md: Add splitter to turn SF moves into SI moves.
+
 2000-02-29  Philip Blundell  <pb@futuretv.com>
 
 	* config/arm/conix-elf.h: New file.
