--- a/merged-arm-thumb-backend-branch/gcc/ChangeLog
+++ b/merged-arm-thumb-backend-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-03-08  Nick Clifton  <nickc@cygnus.com>
+
+	* config/arm/arm.md (indirect_jump): Force constant addresses into
+	a register. 
+
 2000-03-01  Bernd Schmidt <bernds@cygnus.co.uk>
 
 	* config/arm/arm.md: Add splitter to turn SF moves into SI moves.
