--- a/merged-arm-thumb-backend-branch/gcc/ChangeLog
+++ b/merged-arm-thumb-backend-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-03-15  Nick Clifton  <nickc@cygnus.com>
+
+	* config/arm/arm.c (arm_output_epilogue): Do not pass %c to asm_fprintf.
+
 2000-03-08  Nick Clifton  <nickc@cygnus.com>
 
 	* config/arm/arm.md (indirect_jump): Force constant addresses into
