--- a/newppc-branch/gcc/config/rs6000/ChangeLog
+++ b/newppc-branch/gcc/config/rs6000/ChangeLog
@@ -1,3 +1,13 @@
+2000-03-15  Geoff Keating  <geoffk@cygnus.com>
+
+	* rs6000.c (toc_hash_table): Update for new hash table functions.
+	(toc_hash_function): Likewise.
+	(toc_hash_eq): Likewise.
+	(toc_hash_mark_entry): Likewise.
+	(toc_hash_mark_table): Likewise.
+	(output_toc): Likewise.
+	(rs6000_add_gc_roots): Likewise.
+
 2000-03-15  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
 
 	* t-aix43 (AR_FOR_TARGET): Deleted.  Moved `-X32_64'...
