Add note about the merge to the mainline.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@32576 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/newppc-branch/gcc/config/rs6000/ChangeLog
+++ b/newppc-branch/gcc/config/rs6000/ChangeLog
@@ -1,3 +1,6 @@
+This branch has now been merged into the mainline; you should add any further 
+changes there.
+
 2000-03-15  Geoff Keating  <geoffk@cygnus.com>
 
 	* rs6000.c (toc_hash_table): Update for new hash table functions.
