--- a/merged-arm-thumb-backend-branch/gcc/ChangeLog
+++ b/merged-arm-thumb-backend-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-03-16  Nick Clifton  <nickc@cygnus.com>
+
+	* config/arm/arm.h (ASM_OUTPUT_MI_THUNK): Fix compile time
+	warning.
+
 2000-03-15  Nick Clifton  <nickc@cygnus.com>
 
 	* config/arm/arm.c (arm_output_epilogue): Do not pass %c to asm_fprintf.
