--- a/merged-arm-thumb-backend-branch/gcc/ChangeLog
+++ b/merged-arm-thumb-backend-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-03-23  Richard Earnshaw (rearnsha@arm.com)
+
+	* arm.c (output_return_instruction): Handle more cases where we can
+	return from a function with an ldr instruction.
+	(arm_output_epilogue): Likewise.
+
 2000-03-16  Nick Clifton  <nickc@cygnus.com>
 
 	* config/arm/arm.h (ASM_OUTPUT_MI_THUNK): Fix compile time
