* arm.c (thumb_expand_prologue): Don't clobber the frame pointer if we need to push a large stack frame and there are no callee-saved registers.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@32709 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/merged-arm-thumb-backend-branch/gcc/ChangeLog
+++ b/merged-arm-thumb-backend-branch/gcc/ChangeLog
@@ -4,6 +4,10 @@
 	return from a function with an ldr instruction.
 	(arm_output_epilogue): Likewise.
 
+	* arm.c (thumb_expand_prologue): Don't clobber the frame pointer
+	if we need to push a large stack frame and there are no callee-saved
+	registers.
+
 2000-03-16  Nick Clifton  <nickc@cygnus.com>
 
 	* config/arm/arm.h (ASM_OUTPUT_MI_THUNK): Fix compile time
