* arm.md (epilogue, *epilogue_insns, consttable_*, align_4): Renumber unspec_volatile arguments to avoid duplicates. (consttable_1, consttable_2): Fixes for big-endian mode.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@32711 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/merged-arm-thumb-backend-branch/gcc/ChangeLog
+++ b/merged-arm-thumb-backend-branch/gcc/ChangeLog
@@ -10,7 +10,11 @@
 
 	* arm.c (arm_debugger_arg_offset): An offset of 0 is also valid
 	in ARM code if the frame pointer has been eliminated.
-	
+
+	* arm.md (epilogue, *epilogue_insns, consttable_*, align_4): Renumber
+	unspec_volatile arguments to avoid duplicates.
+	(consttable_1, consttable_2): Fixes for big-endian mode.
+
 2000-03-16  Nick Clifton  <nickc@cygnus.com>
 
 	* config/arm/arm.h (ASM_OUTPUT_MI_THUNK): Fix compile time
