Move definition of ASM_SPEC back into elf.h/semi.h.  It cannot be defined in arm.h because some host assemblers do not support the same switches as the GAS assembler.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@32834 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/merged-arm-thumb-backend-branch/gcc/ChangeLog
+++ b/merged-arm-thumb-backend-branch/gcc/ChangeLog
@@ -1,3 +1,14 @@
+2000-03-30  Nick Clifton  <nickc@cygnus.com>
+
+	* config/arm/semi.h (ASM_SPEC): Restore definition.
+	(SUBTARGET_EXTRA_ASM_SPEC): Define if not already defined.
+
+	* config/arm/elf.h (ASM_SPEC): Restore definition.
+	(SUBTARGET_EXTRA_ASM_SPEC): Define if not already defined.
+
+	* config/arm/arm.h (ASM_SPEC): Remove definition.
+	(SUBTARGET_EXTRA_ASM_SPEC): Remove definition.
+
 2000-03-26  Bernd Schmidt <bernds@cygnus.co.uk>
 
 	* config/arm/arm.c: Disable -fschedule-insns for Thumb.
