Apply Philip Blundell's patch to fix typos in SUBTARGET_EXTRA_LINK_SPEC
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@32883 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/merged-arm-thumb-backend-branch/gcc/ChangeLog
+++ b/merged-arm-thumb-backend-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-04-03  Philip Blundell  <philb@gnu.org>
+
+	* config/arm/linux-elf.h (SUBTARGET_EXTRA_LINK_SPEC): Fix typos.
+
 2000-03-31  Richard Earnshaw (rearnsha@arm.com)
 
 	* Merge trunk code from tag merged-arm-thumb-backend-merge_20000325 
