--- a/condexec-branch/gcc/config/d30v/d30v.md
+++ b/condexec-branch/gcc/config/d30v/d30v.md
@@ -2556,73 +2556,60 @@
 }"
   [(set_attr "type" "br")])
 
-;; Peepholes to turn set flag, cond. jumps into branch if register ==/!= 0.
+;; Peephole to turn set flag, cond. jumps into branch if register ==/!= 0.
 
-(define_peephole
-  [(set (match_operand:CC 1 "br_flag_operand" "=b")
-	(match_operator:CC 2 "branch_zero_operator"
-			   [(match_operand:SI 3 "gpr_operand" "d")
+(define_peephole2
+  [(set (match_operand:CC 0 "br_flag_operand" "=b")
+	(match_operator:CC 1 "branch_zero_operator"
+			   [(match_operand:SI 2 "gpr_operand" "d")
 			    (const_int 0)]))
    (set (pc)
-	(if_then_else (match_operator:CC 4 "condexec_test_operator"
-					 [(match_dup 1)
+	(if_then_else (match_operator:CC 3 "condexec_test_operator"
+					 [(match_dup 0)
 					  (const_int 0)])
-		      (label_ref (match_operand 0 "" ""))
-		      (pc)))]
-  "(find_regno_note (insn, REG_DEAD, REGNO (operands[1])) != 0)"
-  "*
+		      (match_operand 4 "" "")
+		      (match_operand 5 "" "")))]
+  "reg_dead_p (last_insn, operands[0])"
+  [(set (pc)
+	(if_then_else (match_dup 6)
+		      (match_dup 4)
+		      (match_dup 5)))]
+  "
 {
   int true_false = 1;
-
-  if (GET_CODE (operands[2]) == EQ)
+  if (GET_CODE (operands[1]) == EQ)
     true_false = !true_false;
-
-  if (GET_CODE (operands[4]) == EQ)
+  if (GET_CODE (operands[3]) == EQ)
     true_false = !true_false;
+  operands[6] = gen_rtx_fmt_ee ((true_false ? NE : EQ), CCmode,
+				operands[2], const0_rtx);
+}")
 
-  return (true_false) ? \"bratnz %3,%l0\" : \"bratzr %3,%l0\";
-}"
-  [(set_attr "type" "br2")])
-
-(define_peephole
-  [(set (match_operand:CC 1 "br_flag_operand" "=b")
-	(match_operator:CC 2 "branch_zero_operator"
-			   [(match_operand:SI 3 "gpr_operand" "d")
-			    (const_int 0)]))
-   (set (pc)
-	(if_then_else (match_operator:CC 4 "condexec_test_operator"
-					 [(match_dup 1)
-					  (const_int 0)])
-		      (pc)
-		      (label_ref (match_operand 0 "" ""))))]
-  "(find_regno_note (insn, REG_DEAD, REGNO (operands[1])) != 0)"
+(define_insn "*bra_reg_true"
+  [(set (pc) (if_then_else (match_operator:CC 1 "branch_zero_operator"
+			     [(match_operand:SI 2 "gpr_operand" "d")
+			      (const_int 0)])
+			   (label_ref (match_operand 0 "" ""))
+			   (pc)))]
+  "reload_completed"
   "*
 {
-  int true_false = 0;
-
-  if (GET_CODE (operands[2]) == EQ)
-    true_false = !true_false;
-
-  if (GET_CODE (operands[4]) == EQ)
-    true_false = !true_false;
-
-  return (true_false) ? \"bratnz %3,%l0\" : \"bratzr %3,%l0\";
+  return GET_CODE (operands[1]) == NE ? \"bratnz %2,%l0\" : \"bratzr %2,%l0\";
 }"
   [(set_attr "type" "br2")])
 
-;; Convert if (a & mask) into btst.  */
-(define_peephole
-  [(set (match_operand:SI 0 "gpr_operand" "=d")
-	(and:SI (match_operand:SI 1 "gpr_operand" "%d")
-		(match_operand:SI 2 "bitset_operand" "K")))
-   (set (match_operand:CC 3 "flag_operand" "=f")
-	(ne:CC (match_dup 0)
-	       (const_int 0)))]
-  "(find_regno_note (prev_nonnote_insn (insn), REG_DEAD, REGNO (operands[0])) != 0)"
-  "btst %3,%1,%B2"
-  [(set_attr "length" "4")
-   (set_attr "type" "either")])
-
+(define_insn "*bra_reg_false"
+  [(set (pc) (if_then_else (match_operator:CC 1 "branch_zero_operator"
+			     [(match_operand:SI 2 "gpr_operand" "d")
+			      (const_int 0)])
+			   (pc)
+			   (label_ref (match_operand 0 "" ""))))]
+  "reload_completed"
+  "*
+{
+  return GET_CODE (operands[1]) == EQ ? \"bratnz %2,%l0\" : \"bratzr %2,%l0\";
+}"
+  [(set_attr "type" "br2")])
 
 ;; ::::::::::::::::::::
 ;; ::
