* arm.md (nop): Use the standard RTL expression.  Don't code as a define_expand. (*arm_nop, *thumb_nop): Delete.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@33025 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/merged-arm-thumb-backend-branch/gcc/ChangeLog
+++ b/merged-arm-thumb-backend-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-04-08  Richard Earnshaw (rearnsha@arm.com)
+
+	* arm.md (nop): Use the standard RTL expression.  Don't code as a
+	define_expand.
+	(*arm_nop, *thumb_nop): Delete.
+
 2000-04-03  Richard Earnshaw (rearnsha@arm.com)
 
 	Merge Change from trunk:
